# stm32-f3-discovery-peripherals

./: .gitignore  Cargo.toml  README.md
src/: main.rs
