[package]
authors = ["Neil Pate <neil@premiergsolutions.com>"]
edition = "2018"
readme = "README.md"
name = "super-simple"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
volatile-register = "0.2"
cortex-m = "0.6.0"

[dependencies.stm32f3]
version = "0.6.0"
features = ["stm32f303", "rt"]

[[bin]]
name = "super-simple"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
